# diary_web

./: .gitignore  README.md  allow_firewall.ps1  decrypt_backup.py  diary.service  main.py  pyproject.toml  requirements.txt  server.py  setup_portproxy.bat
.github/workflows/: test.yml
app/: __init__.py  api.py  auth.py  config.py  crypto.py  diary.py  errors.py  middleware.py  schemas.py  search.py
config/: master.key  rate_limits.json  search.db  search.db-shm  search.db-wal  sessions.enc.json  sessions.json
data/2026/05/: 10.md  11.md  12.md
static/: app.js  index.html
tests/: conftest.py  test_api.py  test_auth.py  test_crypto.py  test_diary.py
